--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -9,7 +9,7 @@ target_sources(zeek-agent
 )
 
 if ( HAVE_DARWIN )
-    target_sources(zeek-agent PRIVATE platform.posix.cc platform.darwin.cc platform.darwin.mm)
+    target_sources(zeek-agent PRIVATE platform.posix.cc platform.darwin.mm)
     target_link_libraries(zeek-agent PRIVATE "EndpointSecurity")
 endif ()
 
