--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -205,6 +205,7 @@ jobs:
 
   debug_windows_2022:
     runs-on: windows-2022
+    if: ${{ false }} # disable temporarily
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
