Add a macOS network extension to the agent.
On macOS, the agent was already running as a system extension. This
adds the appropriate magic to hook into the OS as a "Network
Extension", so that we gain access to network activity. We don't use
this yet for anything, but this gets all the infrastructure pieces in
place (which turned out to be quite tricky ...).

A specific change here concerns moving the agent's main logic into a
separate thread on macOS, because a Network Extension (apparently)
needs to take over the main thread. That comes with some required
reorganization of the logic for option parsing so that our
macOS-specific code for retrieving system `defaults` doesn't execute
before we've moved on to the new thread.

--- a/packaging/darwin/ZeekAgent.app/Info.plist.agent.in
+++ b/packaging/darwin/ZeekAgent.app/Info.plist.agent.in
@@ -27,5 +27,19 @@
     <key>NSEndpointSecurityMachServiceName</key>
     <string>org.zeek.zeek-agent.agent</string>
 
+    <key>NSSystemExtensionUsageDescription</key>
+    <string>Endpoint agent forwarding host activity to Zeek</string>
+
+     <key>NetworkExtension</key>
+        <dict>
+                <key>NEMachServiceName</key>
+                <string>org.zeek.zeek-agent.agent</string>
+
+                <key>NEProviderClasses</key>
+                <dict>
+                        <key>com.apple.networkextension.filter-data</key>
+                        <string>FilterDataProvider</string>
+                </dict>
+        </dict>
 </dict>
 </plist>
