fixup! Adding Windows installer packaging

--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -8,12 +8,14 @@ set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Zeek Agent is an endpoint monitoring tool
 set(CPACK_PACKAGE_HOMEPAGE_URL "https://zeek.org")
 set(CPACK_PACKAGE_RELOCATABLE yes)
 set(CPACK_PACKAGE_VENDOR "Zeek Project")
-set(ZEEK_BINARY_VERSION_NAME "zeek-agent-${ZEEK_AGENT_VERSION}")
+set(CPACK_PACKAGE_VERSION "${ZEEK_AGENT_VERSION}")
 set(CPACK_PACKAGE_VERSION_MAJOR "${ZEEK_AGENT_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${ZEEK_AGENT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${ZEEK_AGENT_VERSION_PATCH}")
 set(CPACK_SOURCE_GENERATOR "TGZ")
-set(CPACK_SOURCE_PACKAGE_FILE_NAME "${ZEEK_BINARY_VERSION_NAME}-source")
+
+set(ZEEK_PACKAGE_FILE_NAME_BASE "zeek-agent-${ZEEK_AGENT_VERSION}")
+set(CPACK_SOURCE_PACKAGE_FILE_NAME "${ZEEK_PACKAGE_FILE_NAME_BASE}-source")
 
 list(APPEND CPACK_SOURCE_IGNORE_FILES "^${CMAKE_SOURCE_DIR}.*/build/")
 list(APPEND CPACK_SOURCE_IGNORE_FILES "^${CMAKE_SOURCE_DIR}.*/out/")
@@ -57,7 +59,7 @@ elseif ( HAVE_WINDOWS )
     set(CPACK_GENERATOR WIX)
     set(CPACK_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/windows" ${CPACK_MODULE_PATH})
     set(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/windows\\\\icon.bmp")
-    set(CPACK_PACKAGE_FILE_NAME "${ZEEK_BINARY_VERSION_NAME}")
+    set(CPACK_PACKAGE_FILE_NAME "${ZEEK_PACKAGE_FILE_NAME_BASE}")
     set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CMAKE_PROJECT_NAME}")
 
     # WIX expects the version number to be formatted like a.b.c.d. We use the commit
@@ -102,7 +104,7 @@ elseif ( HAVE_WINDOWS )
 endif ()
 
 if ( NOT HAVE_WINDOWS )
-    set(CPACK_PACKAGE_FILE_NAME "${ZEEK_BINARY_VERSION_NAME}-${CPACK_SYSTEM_NAME}")
+    set(CPACK_PACKAGE_FILE_NAME "${ZEEK_PACKAGE_FILE_NAME_BASE}-${CPACK_SYSTEM_NAME}")
     set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
 endif ()
 
