--- a/packaging/zeek-agent.cfg.template
+++ b/packaging/zeek-agent.cfg.template
@@ -9,33 +9,57 @@
 # Valid values: "trace", "debug", "info", "warning", "error", "critical", "off"
 # "trace" will return the most log data, while "critical" returns the least.
 # Setting this option to "off" will disable all logging.
-level = "off"
+#level = "info"
 
 # Valid values:
 # "file": send all logs to the file defined in the log.path option
 # "system": send logs the appropriate system logging facility (e.g. syslog)
 # "stdout": send all logs to stdout
-type = "stdout"
+#type = "stdout"
 
 # A path to a file to store log data if the log.type option is set to "file".
-path = ""
+#path = ""
 
 [zeek]
 # A bracketed list of hostname/ip:port values that define what hosts running Zeek
 # that the agent should send data to. This option must be set for zeek-agent to
 # function properly.
-destination = []
+#destination = []
 
-# The timeout in seconds for connecting to the hosts in the zeek.destinations
-# option.
-timeout = 5
+# The interval in seconds to expire any state from a connected Zeek instance if
+# no activity has been seen from it.
+#timeout = 120
+
+# The interval in seconds for when "hello" pings are sent.
+#hello_interval = 60
+
+# The amount of time in seconds to wait to reconnect to a Zeek instance if the
+# connection is closed.
+#reconnect_interval = 30
 
 #groups =
-#hello_interval =
-#reconnect_interval =
-#ssl_cafile =
-#ssl_capath =
-#ssl_certificate =
-#ssl_disable =
-#ssl_keyfile =
+
+# If true, the agent will not use SSL for network connections. By default,
+# SSL will be used even if no certificates / CAs have been configured, so
+# that the communication will always be encrypted.
+#ssl_disable = false
+
+# Path to a file containing concatenated trusted certificates in PEM format.
+# If set, the agent will require valid certificates for all peers.
+#ssl_cafile = ""
+
+# Path to an OpenSSL-style directory of trusted certfiicates. If set, the
+# agent will rqeuire valid certificates from all peers.
+#ssl_capath = ""
+
+# Path to a file containing an X.509 certificat for this node in PEM format.
+# If set, the agent will require valid certificates for all peers.
+#ssl_certificate = ""
+
+# Path to the file containing the private key for this node's certificate.
+# If set, the agent will require valid certificates for all peers.
+#ssl_keyfile = ""
+
+# Passphrase to decrypt the private key specified by the ssl_keyfile option.
+# If set, the agent will require valid certificates for all peers.
 #ssl_passphrase =
