--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -331,7 +331,7 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     if: (startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-dev'))
-    needs: [debug_ubuntu_latest, release_alpine_3_15_static, release_macos_11, release_source]
+    needs: [debug_ubuntu_latest, release_alpine_3_15_static, release_macos_11, release_windows_2022, release_source]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
