Reorganize platform-specific code.
This moves the code that used to be in `src/util/platform.*` into a
new directory `src/platform/`, with further per-platform sub-directories.

This change further includes:

- Make `glob()` a platform-independent utility function that's relying
  on `p-ranav/glob`.

- Remove the POSIX platform layer (there wasn't much in there
  anymore, which we now just duplicate for each platform as
  neccessary).

- Move platform-specific shutdown code into `platform::done()`.

(The code in `tables/` remains unchanged.)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -79,6 +79,7 @@ add_executable(zeek-agent main.cc ${APP_ICON_RESOURCE_WINDOWS})
 
 add_subdirectory(core)
 add_subdirectory(io)
+add_subdirectory(platform)
 add_subdirectory(tables)
 add_subdirectory(util)
 
