Factor out our CMake compile and link options.
This makes them target options instead of being global.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,67 +15,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include(CheckCompiler)
 include(CheckFunctions)
+include(TargetOptions)
 
-if ( NOT HAVE_WINDOWS )
-    if ( CMAKE_BUILD_TYPE STREQUAL "Debug" )
-        add_compile_options(-O0)
-    endif()
-
-    add_compile_options($<$<BOOL:${USE_WERROR}>:-Werror>)
-    add_compile_options(-Wno-unused-parameter)
-endif()
-
-if ( HAVE_CLANG )
-    add_compile_options(-Wpedantic)
-    add_compile_options(-Wno-c99-designator)
-    add_compile_options(-Wno-vla-extension)
-endif ()
-
-if ( HAVE_GCC )
-    add_compile_options(-Wno-missing-field-initializers)
-endif ()
-
-if ( HAVE_WINDOWS )
-    # Keep min and max macros from being defined, which breaks std::min and std::max.
-    add_compile_options(/DNOMINMAX)
-    # Reduce the amount of stuff that gets included with windows.h.
-    add_compile_options(/DWIN32_LEAN_AND_MEAN)
-
-    add_compile_options($<$<BOOL:${USE_WERROR}>:/WX>)
-    # TODO: enable this eventually after figuring out how to disable it for third party code.
-    # Equivalent to -Wpedantic but on Windows
-#    add_compile_options(/Wall)
-
-    # This is needed so that the console window pops up when you run the exe.
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
-
-    set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_SOURCE_DIR}/packaging/windows/appicon.rc")
-endif ()
-
-if ( NOT "${USE_DOCTEST}" )
-    add_compile_definitions(DOCTEST_CONFIG_DISABLE)
-endif ()
-
-if ( USE_SANITIZERS )
-    add_compile_options(-fsanitize=${USE_SANITIZERS})
-
-    if ( NOT HAVE_WINDOWS )
-        # Recommended flags per https://github.com/google/sanitizers/wiki/AddressSanitizer
-        # GCC vs clang: https://stackoverflow.com/a/47022141
-        add_compile_options(-fno-omit-frame-pointer -fno-optimize-sibling-calls) # Removed -O1
-        add_link_options(-fsanitize=${USE_SANITIZERS})
-    endif ()
-
-    if ( HAVE_CLANG )
-        add_compile_options(-shared-libsan)
-        add_link_options(-shared-libsan -frtlib-add-rpath)
-    endif ()
-endif()
-
-### Configure build
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR}/include)
 
 add_executable(zeek-agent main.cc ${APP_ICON_RESOURCE_WINDOWS})
+add_target_options(zeek-agent PRIVATE)
 
 add_subdirectory(core)
 add_subdirectory(io)
