Move macOS installer app into platform code.
It used to be part of `packaging/`.

--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -39,16 +39,14 @@ if ( HAVE_DARWIN )
     set(CPACK_GENERATOR "Bundle")
     set(CPACK_SYSTEM_NAME "macos${MACOS_MINIMUM_VERSION}")
     set(CPACK_APPLE_BUNDLE_ID "org.zeek.zeek-agent")
-    set(CPACK_BUNDLE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/darwin/ZeekAgent.app/ZeekAgent.icns")
+    set(CPACK_BUNDLE_ICON "${CMAKE_SOURCE_DIR}/src/platform/darwin/ZeekAgent.app/ZeekAgent.icns")
     set(CPACK_BUNDLE_NAME "ZeekAgent")
-    set(CPACK_BUNDLE_PLIST "${CMAKE_CURRENT_BINARY_DIR}/darwin/ZeekAgent.app/Info.plist.app")
+    set(CPACK_BUNDLE_PLIST "${CMAKE_BINARY_DIR}/src/platform/darwin/ZeekAgent.app/Info.plist.app")
     set(CPACK_DMG_DISABLE_APPLICATIONS_SYMLINK no)
     set(CPACK_DMG_VOLUME_NAME "Zeek Agent ${CPACK_PACKAGE_VERSION}")
 
     set(CPACK_POST_BUILD_SCRIPTS "${CMAKE_CURRENT_SOURCE_DIR}/darwin/post-build.cmake")
     set(CPACK_COMMAND_HDIUTIL "${CMAKE_CURRENT_SOURCE_DIR}/darwin/hdiutil-with-codesign")
-
-    add_subdirectory(darwin/ZeekAgent.app)
 elseif ( HAVE_LINUX )
     set(CPACK_GENERATOR "TGZ")
     set(CPACK_SYSTEM_NAME "linux-${CMAKE_HOST_SYSTEM_PROCESSOR}")
