--- a/src/platform/darwin/CMakeLists.txt
+++ b/src/platform/darwin/CMakeLists.txt
@@ -4,3 +4,5 @@ target_sources(zeek-agent PRIVATE platform.mm)
 target_link_libraries(zeek-agent PRIVATE "EndpointSecurity")
 target_link_libraries(zeek-agent PRIVATE "-framework NetworkExtension")
 target_link_libraries(zeek-agent PRIVATE "-framework Cocoa")
+
+add_subdirectory(ZeekAgent.app)
