--- a/src/platform/windows/CMakeLists.txt
+++ b/src/platform/windows/CMakeLists.txt
@@ -1,3 +1,3 @@
 # Copyright (c) 2021 by the Zeek Project. See LICENSE for details.
 
-target_sources(zeek-agent PRIVATE platform.cc windows.cc)
+target_sources(zeek-agent PRIVATE platform.cc)
