--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,11 +28,12 @@ add_subdirectory(platform)
 add_subdirectory(tables)
 add_subdirectory(util)
 
-# Ensure that we include the our Broker version even if existing includes may lead us elswhere.
-target_include_directories(zeek-agent PRIVATE $<TARGET_PROPERTY:broker_static,INCLUDE_DIRECTORIES>)
+if ( USE_BROKER )
+    # Ensure that we include our Broker version even if existing includes may lead us elswhere.
+    target_include_directories(zeek-agent PRIVATE $<TARGET_PROPERTY:broker_static,INCLUDE_DIRECTORIES>)
+endif ()
 
 target_link_libraries(zeek-agent PRIVATE ${CMAKE_DL_LIBS})
-target_link_libraries(zeek-agent PRIVATE broker_static)
 target_link_libraries(zeek-agent PRIVATE doctest::doctest)
 target_link_libraries(zeek-agent PRIVATE fmt::fmt)
 target_link_libraries(zeek-agent PRIVATE ghcFilesystem::ghc_filesystem)
@@ -47,6 +48,10 @@ target_link_libraries(zeek-agent PRIVATE stduuid)
 target_link_libraries(zeek-agent PRIVATE tomlplusplus::tomlplusplus)
 target_link_libraries(zeek-agent PRIVATE ztd::out_ptr)
 target_link_libraries(zeek-agent PRIVATE Glob)
+
+if ( USE_BROKER )
+    target_link_libraries(zeek-agent PRIVATE broker_static)
+endif ()
 
 if ( NOT HAVE_GETOPT_LONG )
     target_link_libraries(zeek-agent PRIVATE 3rdparty:3rdparty)
