--- a/src/tables/CMakeLists.txt
+++ b/src/tables/CMakeLists.txt
@@ -1,5 +1,7 @@
 # Copyright (c) 2021 by the Zeek Project. See LICENSE for details.
 
+include(BPF)
+
 add_subdirectory(files)
 add_subdirectory(processes)
 add_subdirectory(sockets)
