--- a/src/platform/linux/CMakeLists.txt
+++ b/src/platform/linux/CMakeLists.txt
@@ -1,3 +1,4 @@
 # Copyright (c) 2021 by the Zeek Project. See LICENSE for details.
 
-target_sources(zeek-agent PRIVATE platform.cc)
+target_sources(zeek-agent PRIVATE platform.cc bpf.cc)
+target_link_libraries(zeek-agent PRIVATE bpf)
