--- a/src/tables/sockets/CMakeLists.txt
+++ b/src/tables/sockets/CMakeLists.txt
@@ -7,6 +7,7 @@ if ( HAVE_DARWIN )
 endif ()
 
 if ( HAVE_LINUX )
+    generate_bpf_code(zeek-agent sockets sockets.linux.bpf.c)
     target_sources(zeek-agent PRIVATE sockets.linux.cc)
 endif ()
 
